Use transofrm instead of left styling to prevent layout shifts

--- a/src/css/controls/imports/tooltip.less
+++ b/src/css/controls/imports/tooltip.less
@@ -142,7 +142,7 @@
 }
 
 .jw-tooltip-time {
-    .rect(0, auto);
+    .rect(100%, auto);
     bottom: 100%;
     line-height: normal;
     padding: 0;
@@ -153,6 +153,7 @@
         bottom: 0;
         min-height: 0;
         width: auto;
+        left: 0;
     }
 }
 
